2009-03-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-list.cc:
	Fixed problem #576174 (case insensitive file name sorting in non en_US.utf8 locale)

2009-03-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.cc:
	i18n: new translation string ("Show terminal")

2009-03-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.cc:
	Added shortcut CTRL+E to command line history list

2009-03-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	Moved regexes GtkTreeModel from gnome-cmd-data.h to gnome-cmd-advrename-dialog.cc

2009-02-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-chown-component.cc:
	* src/gnome-cmd-chown-dialog.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-main-win.cc:
	* src/main.cc:
	* src/owner.cc
	* src/owner.h:
	Fixed problem #567506 (slow startup for systems with many users)

2009-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	typo: filename -> file name

	* libgcmd/gnome-cmd-string-dialog.c:
	* plugins/cvs/cvs-plugin.c:
	* plugins/cvs/interface.c:
	* plugins/fileroller/file-roller-plugin.c:
	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-chmod-dialog.cc:
	* src/gnome-cmd-chown-dialog.cc:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-patternsel-dialog.cc:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	* src/gnome-cmd-xfer-progress-win.cc:
	* src/plugin_manager.cc:
	Fixed problem #571558 (replacing deprecated GNOME_STOCK_* buttons with GTK_STOCK_* counterparts)

2009-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc: